testcases/phase2/P2_Tests/sample.rc
typedef int I1;
typedef int I2;
typedef float F1;
typedef float F2;

function: I1 foo(I2 & a)
{
  a++;
  return a;
}

function: int foo1()
{
  F1 a=1;    //fine
  I1 b=1;    //fine
  I2 c=b;    //fine
  float d=foo(a);  //error
  float e=foo(b);  //fine
  c=foo(b);     //fine
}